@@ -1,6 +1,6 @@
 <%@ page contentType="text/html; charset=UTF-8"%>
 <%@ include file="/WEB-INF/jspf/taglibs.jsp"%>
 
-<shell:title text="Test Title"/>
+<shell:title text="Demo Open Title"/>
 
-<%@ include file="/WEB-INF/jspf/test.jsp"%>
+<%@ include file="/WEB-INF/jspf/demo.jsp"%>
