@@ -37,7 +37,7 @@
 		<u:set var="uri" scope="request"><%=org.bgerp.app.servlet.filter.OpenFilter.getRequestURI(request)%></u:set>
 		<u:set var="secret" scope="request"><%=org.bgerp.app.servlet.filter.OpenFilter.getRequestSecret(request)%></u:set>
 
-		<%@ include file="/WEB-INF/jspf/open/test/url.jsp"%>
+		<%@ include file="/WEB-INF/jspf/open/demo/url.jsp"%>
 		<%@ include file="/WEB-INF/jspf/open/profile/url.jsp"%>
 		<%@ include file="/WEB-INF/jspf/open/process/url.jsp"%>
 
